--- a/explicit.cabal
+++ b/explicit.cabal
@@ -26,7 +26,9 @@ test-suite explicit-test
   build-depends:       base
                      , explicit
                      , hspec
+                     , mtl
   other-modules:       Explicit.UsageSpec
+                     , Explicit.Example
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
